--- a/README.Rmd
+++ b/README.Rmd
@@ -11,8 +11,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%",
-  cache = TRUE
+  out.width = "100%"
 )
 ```
 # virtuoso
@@ -60,7 +59,6 @@ Our connection is now live, and accepts SPARQL queries directly.
 
 ```{r}
 ex <- DBI::dbGetQuery(con, "SPARQL SELECT * WHERE { ?s ?p ?o }")
-head(ex)
 ```
 
 ## DSL
@@ -80,68 +78,8 @@ We can clear all data in the default graph if we want a fresh start:
 vos_clear_graph(con)
 ```
 
------
+---
 
-
-## Tabular data as RDF?
-
-
-We can represent any data as RDF with a little care.  For instance, consider the `nycflights13` data. 
-
-```{r}
-library(nycflights13)
-library(dplyr)
-
-```
-
-
-First, we must represent any primary or foreign keys in any table must be as URIs and not literal integers or strings: 
-
-```{r as_uri}
-uri_flights <- flights %>% 
-  mutate(tailnum = paste0("planes:", tailnum),
-         carrier = paste0("airlines:", carrier))
-```
-
-We write the `data.frame`s out as nquads.  Recall that each cell of a `data.frame` can be represented as a triple, in which the column is the predicate, the primary key (or row number) the subject, and the cell value the object.  We turn column names and primary keys into URIs using a prefix based on the table name.  (Note that `rdflib` does this conversion by merely munging cells and calling `write.table`, it is not a standard `redland` library transform).
-
-```{r}
-write_nquads(airlines,  "airlines.nq", key = "carrier", prefix = "airlines:")
-write_nquads(planes,  "planes.nq", key = "tailnum", prefix = "planes:")
-write_nquads(uri_flights,  "flights.nq", prefix = "flights:")
-```
-
-We're ready to import all these triples.  This may take a few minutes:
-
-```{r}
-system.time(
-  vos_import(con, c("flights.nq", "planes.nq", "airlines.nq"))
-)
-```
-
-
-The data from all three tables is now reduced into a single triplestore graph, one triple for each data point. Rather than joining tables, we can write SPARQL query that names the columns we want.
-
-
-
-```{r}
-
-query <- 
-'SELECT  ?carrier ?name ?manufacturer ?model ?dep_delay
-WHERE {
-?flight <flights:tailnum>  ?tailnum .
-?flight <flights:carrier>  ?carrier .
-?flight <flights:dep_delay>  ?dep_delay .
-?tailnum <planes:manufacturer> ?manufacturer .
-?tailnum <planes:model> ?model .
-?carrier <airlines:name> ?name
-}'
-
-system.time(
-df <- vos_query(con, query)
-)
-
-head(df)
-```
+See richer examples in the package vignettes.
 
 
