--- a/README.Rmd
+++ b/README.Rmd
@@ -72,6 +72,14 @@ example <- system.file("extdata", "person.nq", package = "virtuoso")
 vos_import(con, example)
 ```
 
+```{r}
+vos_query(con, 
+"SELECT ?p ?o 
+ WHERE { ?s ?p ?o .
+        ?s a <http://schema.org/Person>
+       }")
+```
+
 We can clear all data in the default graph if we want a fresh start:
 
 ```{r}
