--- a/vignettes/articles/datalake.Rmd
+++ b/vignettes/articles/datalake.Rmd
@@ -20,6 +20,8 @@ knitr::opts_chunk$set(
 
 ```{r}
 library(virtuoso)
+library(rdftools) # for write_nquads
+
 library(nycflights13)
 library(dplyr)
 
