--- a/vignettes/articles/datalake.Rmd
+++ b/vignettes/articles/datalake.Rmd
@@ -90,3 +90,10 @@ head(df)
 ```{r}
 myserver$kill()
 ```
+
+
+```{r include=FALSE}
+unlink("flights.nq")
+unlink("planes.nq")
+unlink("airlines.nq")
+```
