Move write_nquads and select/filter to rdftools (#8)
* attempt appveyor ... here goes nothin'

* Some experimental methods

* add jsonlite

let vos_start customize wait time

* update docs

* stringi

* update docs

* candidate for DSL

* tidy up docs a bit

* update docs

* DSL proof of principle

* some testing

* tests

* Move write_nquads over to rdftools

* suggest dplyr

* update docs

--- a/vignettes/articles/datalake.Rmd
+++ b/vignettes/articles/datalake.Rmd
@@ -20,6 +20,8 @@ knitr::opts_chunk$set(
 
 ```{r}
 library(virtuoso)
+library(rdftools) # for write_nquads
+
 library(nycflights13)
 library(dplyr)
 
@@ -87,4 +89,11 @@ head(df)
 
 ```{r}
 myserver$kill()
+```
+
+
+```{r include=FALSE}
+unlink("flights.nq")
+unlink("planes.nq")
+unlink("airlines.nq")
 ```
