a minimal viable linux config
Should work when Virtuoso 7.2 is installed from the double-click installer.  Currently assists with following:

- Guesses location and adds virtuoso to path
(on `vos_install()`)
- Detects default virtuoso.ini and modifies (on `vos_start()`)
- Switches ODBC driver name to default used (on `vos_connect()`

Includes various other minor tweaks:

- avoid warning on is.na(p) in `vos_status`
- `vos_install()` can be called on any OS.
- tweak readme example to show sparql results

- NOTE: Looks like bulk loader is not yet working...

--- a/README.Rmd
+++ b/README.Rmd
@@ -60,7 +60,7 @@ con <- vos_connect()
 Our connection is now live, and accepts SPARQL queries directly.  
 
 ```{r}
-ex <- DBI::dbGetQuery(con, "SPARQL SELECT * WHERE { ?s ?p ?o }")
+DBI::dbGetQuery(con, "SPARQL SELECT * WHERE { ?s ?p ?o } LIMIT 4")
 ```
 
 ## DSL
