Edits addressing rOpenSci peer review (#25)
* edits for rOpenSci review (closes #26)
* use ps functions directly to control virtuoso process (#24) (closes #23)
* enable a fallback url for downloading
* run styler::style_pkg()
* update vignette

--- a/vignettes/articles/datalake.Rmd
+++ b/vignettes/articles/datalake.Rmd
@@ -21,16 +21,16 @@ knitr::opts_chunk$set(
 
 ```{r}
 library(virtuoso)
-library(rdftools) # for write_nquads.  Needs: install_github("cboettig/rdftools")
 library(dplyr)
+library(nycflights13)
+library(jsonld)
 
+
+# needed write_nquads().  Install using: install_github("cboettig/rdftools")
+library(rdftools) 
 ```
 
 # Tabular Data
-
-```{r}
-library(nycflights13)
-```
 
 We start up our Virtuoso server, wait for it to come up, and then connect:
 
@@ -101,13 +101,11 @@ Transform JSON (or list data) into triples.  In this case, we have a large JSON 
 containing metadata on all rOpenSci packages:
 
 ```{r}
-library(jsonlite)
-library(jsonld)
-
 download.file("https://raw.githubusercontent.com/ropensci/roregistry/gh-pages/raw_cm.json", "raw_cm.json")
-nq <- jsonld::jsonld_to_rdf("raw_cm.json") 
-writeLines(nq, "ro.nq.gz")
+nq <- jsonld::jsonld_to_rdf("raw_cm.json") # drops implicit URIs if not base URIs
+writeLines(nq, gzfile("ro.nq.gz"))
 ```
+
 
 
 And bulk-import
@@ -122,12 +120,11 @@ package name, license, and co-author surnames:
 ```{r}
 query <-
 "PREFIX schema: <http://schema.org/>
-SELECT DISTINCT ?package ?license ?coauthor
+SELECT DISTINCT ?coauthor  ?license ?package 
  WHERE {
- ?s schema:identifier ?package ;
+ ?s schema:name ?package ;
     schema:author ?author ;
     schema:license ?license ;
-    schema:name ?name ;
     schema:author ?coauth .
  ?author schema:givenName 'Carl' .
  ?author schema:familyName 'Boettiger' .
