:bug: fix: avoid gc of virtuoso processx
We need to cache processx process so server persists, even though we can rediscover it by ps.  Otherwise, garbage collection seems to think we're done with the process and kills it.

Also, update vignette now that this is all working.

--- a/vignettes/articles/datalake.Rmd
+++ b/vignettes/articles/datalake.Rmd
@@ -35,7 +35,7 @@ library(rdftools)
 We start up our Virtuoso server, wait for it to come up, and then connect:
 
 ```{r install}
-vos_start()
+p <- vos_start()
 ```
 
 ```{r}
@@ -60,6 +60,7 @@ write_nquads(uri_flights,  "flights.nq", prefix = "flights:")
 ```
 
 We're ready to import all these triples.  This may take a few minutes:
+
 
 ```{r}
 system.time(
