update readme link

--- a/README.Rmd
+++ b/README.Rmd
@@ -97,11 +97,12 @@ vos_import(con, bad_file)
 We can now query the imported data using SPARQL.  
 
 ```{r}
-vos_query(con, 
+df <- vos_query(con, 
 "SELECT ?p ?o 
  WHERE { ?s ?p ?o .
         ?s a <http://schema.org/Person>
        }")
+head(df)
 ```
 
 ```{r}
@@ -145,7 +146,7 @@ Please see the package vignettes for more information:
 
 ---
 
-Please note that the `virtuoso` R package is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
+Please note that the `virtuoso` R package is released with a [Contributor Code of Conduct](https://docs.ropensci.org/virtuoso/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
 
 
 ```{r include=FALSE}
